--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: jweisz@us.ibm.com
 description: >
   3rd Workshop on Human-AI Co-Creation with Generative Models
 # baseurl: "/bulma-clean-theme"
-url: "https://hai-gen2022.github.io"
+url: "https://hai-gen.github.io/2022"
 permalink: pretty
 favicon: favicon.png
 # gh_sponsor: chrisrhymes
@@ -55,6 +55,7 @@ defaults:
       type: "pages"
     values:
       show_sidebar: true
+      hero_image: https://hai-gen.github.io/2022/img/pretty-image.jpg
   -
     scope:
       path: ""
